[gd_scene load_steps=5 format=2]

[ext_resource path="res://level_1.gd" type="Script" id=1]
[ext_resource path="res://player.tscn" type="PackedScene" id=2]
[ext_resource path="res://projectiles/projectile_manager.gd" type="Script" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]

[node name="Level1" type="Node"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1802.0
margin_bottom = 902.0
color = Color( 0.827451, 0.737255, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 103.902, 430.36 )

[node name="ProjectileManager" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="WaveTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="HUD" parent="." instance=ExtResource( 4 )]
[connection signal="damaged" from="Player" to="." method="_on_Player_damaged"]
[connection signal="damaged" from="Player" to="HUD" method="_on_player_damaged"]
[connection signal="fired" from="Player" to="ProjectileManager" method="_on_Player_fired"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_EnemyTimer_timeout"]
[connection signal="timeout" from="WaveTimer" to="." method="_on_WaveTimer_timeout"]
